# airhockey

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  Main.cpp
libs/: CMakeLists.txt
libs/game/: CMakeLists.txt
libs/game/include/: Ball.h  Game.h  GameObject.h  Player.h
libs/game/src/: Ball.cpp  Game.cpp  Player.cpp  miniaudio.cpp
libs/gfx/: CMakeLists.txt
libs/gfx/include/: Draw.h  GameState.h  ResourceManager.h  Shader.h  SpriteRenderer.h  Texture.h  Window.h  stb_image.h
libs/gfx/shaders/: background.vs  rainbow.fs
libs/gfx/src/: Draw.cpp  ResourceManager.cpp  Shader.cpp  SpriteRender.cpp  Texture.cpp  Window.cpp
